kubernetes/mongosh-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.image-pull-policy: IfNotPresent
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mongosh
  name: mongosh
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongosh
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.image-pull-policy: IfNotPresent
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: mongosh
    spec:
      containers:
        - args:
            - mongosh
            - --host
            - mongo
            - initializeDb.js
          image: guesstimoji-initialize-db
          imagePullPolicy: IfNotPresent
          name: mongosh
          resources: {}
      restartPolicy: Always
status: {}
