kubernetes/graph-ql-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.image-pull-policy: IfNotPresent
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: graph-ql-api
  name: graph-ql-api
spec:
  ports:
    - name: "3005"
      port: 3005
      targetPort: 3005
  selector:
    io.kompose.service: graph-ql-api
status:
  loadBalancer: {}
