kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
    annotations:
        # target URL
        nginx.ingress.kubernetes.io/rewrite-target: /
        # spec.ingressClassName did not work
        kubernetes.io/ingress.class: 'nginx'
spec:
    rules:
        # request header matching
        # bypassing hostname to ip wont match service
        - host: guesstimoji.test
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: react-app
                            port:
                                number: 80
